# BuckleUp

./: Cargo.toml  README.md  angular.json  package-lock.json  package.json  paesi.json  tailwind.config.js
.github/workflows/: rust.yml
mongo/: utenti.bson  utenti.metadata.json  viaggi.bson  viaggi.metadata.json
src/: index.html  main.rs  styles.css
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
src/app/admin-page/: admin-page.component.html  admin-page.component.ts  guardia.guard.ts
src/app/admin-page/grid/: grid.component.css  grid.component.html  grid.component.ts
src/app/admin-page/navbar/: navbar.component.html  navbar.component.ts
src/app/carousel/: carousel.component.html  carousel.component.ts
src/app/footer/: footer.component.html
src/app/homepage/: fetch.service.ts  homepage.component.html  homepage.component.ts
src/app/homepage/carousel/: carousel.component.html  carousel.component.ts
src/app/homepage/navbar/: navbar.component.html  navbar.component.ts
src/app/homepage/search-bar/: search-bar.component.html  search-bar.component.ts
src/app/navbar/: navbar.component.html  navbar.component.ts
src/app/pacchetto/: pacchetto.component.html  pacchetto.component.spec.ts  pacchetto.component.ts
src/app/pacchetto/dati-pacchetto/: dati-pacchetto.component.html  dati-pacchetto.component.spec.ts  dati-pacchetto.component.ts
src/app/pacchetto/navbar/: navbar.component.html  navbar.component.ts
src/app/ricerca/: ricerca.component.html  ricerca.component.ts
(+3 files in other folders)
