[package]
name = "BackendBuckleUp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
mongodb = "3.1.1"
tokio = "1.42.0"
actix-web = "4.9.0"
http = "0.2.12"
actix-cors = "0.7.0"
serde_json = "1.0.133"
sha2 = "0.10.8"
serde = { version = "1.0.216", features = ["derive"] }
base64ct = { version = "1.6.0", features = ["alloc"] }
